              line, since links no longer have labels.
            - Routines complement() and parallel() now return by value,
              not pointer.
            - Routines bracket(), jones(), homfly(), homflyAZ() and homflyLM()
              now always run in the current thread, even if a progress
              tracker was passed.
            - New static routine homflyAZtoLM().
        Class ListOnCall:
            - Removed, since this class was not thread-safe and did not add
              anything non-trivial.
        Class ListView:
            - New lightweight objects for basic read-only access to lists.
        Class LPConstraintBase and all subclasses:
            - Changed nConstraints from an enum value to a static constexpr int.
            - Simplified the way in which coefficients are stored.  The old
              Coefficients structures are gone, replaced by a new Coefficient
              type alias and a new octAdjustment constant.  Coefficients
              are now stored directly within LPCol via the field LPCol::extra.
            - Changed addRows() to take an initial tableaux instead of a
              triangulation and column permutation.
            - The verify() routines now take their arguments by reference,
              not by pointer.
        Class LPConstraintEuler, LPConstraintEulerPositive:
            - LPConstraintEuler has been renamed to LPConstraintEulerPositive.
              The old name is kept as a deprecated typedef.
        Class LPConstraintEulerZero:
            - New constraint to use with normal surface enumeration that
              fixes Euler characteristic to be zero.
        Class LPData:
            - Routine reserve() now takes the tableaux by reference.
            - Routine extractSolution() now returns its vector by value,
              instead of using a reference argument.
        Class LPInitialTableaux:
            - The constraintsBroken() routines are gone; instead the class