@@ -51,6 +51,8 @@ void addTangle(pybind11::module_& m) {
         .def("size", &Tangle::size)
         .def("crossing", &Tangle::crossing,
             pybind11::return_value_policy::reference_internal)
+        .def("crossings", &Tangle::crossings,
+            pybind11::return_value_policy::reference_internal)
         .def("begin", &Tangle::begin)
         .def("end", &Tangle::end)
         .def("translate", &Tangle::translate)
